------------------------
/Users/laurenz/graphql-mongodb/uml_diagramms/Resource_GeographicAddress.png

@startuml AllPivotModelsCombined
hide circle
hide methods
hide stereotype
show <<Enumeration>> stereotype
skinparam class {
   BackgroundColor #FFFFFF
}

class DigitalIdentity {

}

class Resource {

}

class Organization {

}

class GeographicAddress {

}

DigitalIdentity -->  "0..1" Resource

Resource --> "0..1  " GeographicAddress

Resource --> "0..*" Organization

@enduml

PlantUML version 1.2019.00(Sun Jan 13 16:46:42 CET 2019)
(GPL source distribution)
Java Runtime: OpenJDK Runtime Environment
JVM: OpenJDK 64-Bit Server VM
Java Version: 13+13-Ubuntu-0ubunt1
Operating System: Linux
OS Version: 5.0.0-37-generic
Default Encoding: UTF-8
Language: en
Country: US

------------------------
